[metadata]
name = json_spm
version = 0.1.0
description = Experimental JSON parser using structural pattern matching
long_description  =  file: README.md
long_description_content_type = text/markdown
author = Leonardo Lazzaro
author_email = lazzaroleonardo@gmail.com
url = https://github.com/llazzaro/json_spm
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
include_package_data = True
zip_safe = False
python_requires = >=3.10
packages = find:

[options.extras_require]
dev =
    black
    coverage>=3.7.1
    flake8
    isort

[flake8]
ignore =
    W503
    E501

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = schedule
line_length = 88
multi_line_output = 3